--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,7 @@ ext {
     junitVersion = '4.12'
     logbackVersion = '1.0.13'
     hikariVersion = '2.4.3'
+    postgresVersion = '9.4-1206-jdbc42'
 }
 
 version = "0.1-snapshot"
@@ -50,7 +51,8 @@ dependencies {
     // Other dependencies
     compile "ch.qos.logback:logback-classic:${logbackVersion}"
     compile "com.zaxxer:HikariCP:${hikariVersion}"
-    
+    compile "org.postgresql:postgresql:${postgresVersion}"
+
 
     // Test dependencies
     testCompile "junit:junit:${junitVersion}"
@@ -60,7 +62,7 @@ shadowJar {
     classifier = 'fat'
     manifest {
         attributes 'Main-Class': 'io.vertx.core.Launcher'
-        attributes 'Main-Verticle': 'org.gooru.nucleus.handlers.resources.bootstrap.LookupVerticle'
+        attributes 'Main-Verticle': 'org.gooru.nucleus.handlers.lookup.bootstrap.LookupVerticle'
         attributes 'Created-By' : 'Gooru.org'
     }
 }
